# parallel-encoder

./: .gitignore  README.md  encode.py  logger.py  pyproject.toml
config/: presets.yaml
encoder/: ffmpeg.py  media_info.py  models.py  vmaf.py  worker_pool.py
presets/: loader.py
tests/: conftest.py  test_encode_safety.py  test_ffmpeg.py  test_logger.py  test_media_info.py  test_models.py  test_presets.py  test_progress.py  test_sidecar_copy.py  test_worker_pool.py  webm_seek_diag.py
ui/: progress.py
