[project]
name = "parallel-encoder"
version = "0.1.0"
description = "Parallel video encoder using FFmpeg"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-tmp-files>=0.0.2"]

[project.scripts]
parallel-encode = "encode:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.pyright]
pythonVersion = "3.10"
venvPath = "."
extraPaths = ["."]
